--- a/kdoctools/customization/fr/entities/help-menu.docbook
+++ b/kdoctools/customization/fr/entities/help-menu.docbook
@@ -5,54 +5,54 @@
 <shortcut>
 <keycombo action="simul"><keycap>F1</keycap></keycombo>
 </shortcut>
-<guimenu>Help</guimenu>
-<guimenuitem>Contents...</guimenuitem>
+<guimenu>Aide</guimenu>
+<guimenuitem>Contenu</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Invokes the KDE Help system</action> starting at the
-&kappname; help pages. (this document).</para></listitem>
+<listitem><para><action>Invoque le système d'aide de KDE</action>
+en démarrant avec le manuel de &kappname; (ce document).</para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
 <shortcut>
-<keycombo action="simul">&Shift;<keycap>F1</keycap></keycombo>
+<keycombo action="simul">&Maj;<keycap>F1</keycap></keycombo>
 </shortcut>
-<guimenu>Help</guimenu>
-<guimenuitem>What's This?</guimenuitem>
+<guimenu>Aide</guimenu>
+<guimenuitem>Qu'est-ce que c'est&nbsp;?</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Changes the mouse cursor to a combination arrow and
-question mark.</action>  Clicking on items within &kappname; will open a help
-window (if one exists for the particular item) explaining the item's
-function.</para></listitem>
+<listitem><para><action>Dessine un point d'interrogation (?) à côté du pointeur
+de la souris</action>. Cliquer sur un item dans &kappname; affiche alors une
+fenêtre d'aide (si celle-ci existe pour cet item particulier), expliquant la fonction
+de l'élément en question.</para></listitem>
 </varlistentry>
 
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>Report Bug...</guimenuitem>
+<guimenu>Aide</guimenu>
+<guimenuitem>Rapport de bogue</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>Opens the Bug report dialog</action> where you can
-report a bug or request a <quote>wishlist</quote> feature.</para></listitem>
+<listitem><para><action>Ouvre une boîte de dialogue de rapport de bogue</action>.
+Vous pouvez alors envoyer un rapport de bogue ou émettre un souhait.</para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>About &kappname;</guimenuitem>
+<guimenu>Aide</guimenu>
+<guimenuitem>À propos de &kappname;</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This will display version and author
-information.</action></para></listitem>
+<listitem><para><action>Affiche des informations sur la version et sur
+l'auteur</action></para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
-<guimenu>Help</guimenu>
-<guimenuitem>About KDE</guimenuitem>
+<guimenu>Aide</guimenu>
+<guimenuitem>À propos de KDE</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This displays the KDE version and other basic
-information.</action></para></listitem>
+<listitem><para><action>Affiche la version de KDE et d'autres informations
+basiques</action></para></listitem>
 </varlistentry>
 </variablelist>
