--- a/kdoctools/customization/fr/entities/install-compile.docbook
+++ b/kdoctools/customization/fr/entities/install-compile.docbook
@@ -1,12 +1,13 @@
-<para>In order to compile and install &kappname; on your system, type the
-following in the base directory of the &kappname; distribution:</para>
+<para>Pour compiler et installer &kappname; sur votre système, saisissez les lignes
+suivantes dans le dossier de base de la distribution de &kappname;&nbsp;:</para>
 
 <screen><prompt>%</prompt> <userinput><command>./configure</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command></userinput>
 <prompt>%</prompt> <userinput><command>make</command> install</userinput>
 </screen>
 
-<para>Since &kappname; uses <command>autoconf</command> and
-<command>automake</command> you should have no trouble compiling it. Should you
-run into problems please report them to the &kde; mailing lists.</para>
+<para>Étant donné que &kappname; utilise <command>autoconf</command>
+et <command>automake</command>, vous ne devriez pas rencontrer
+de problèmes pour le compiler. Si c'est le cas, veuillez les signaler aux listes de
+discussions de &kde;.</para>
 
