--- a/kdoctools/customization/fr/entities/install-intro.docbook
+++ b/kdoctools/customization/fr/entities/install-intro.docbook
@@ -1,6 +1,6 @@
 <!-- requires that packagename is defined in the documentation prologue -->
-<para>&kappname; is part of the &kde; project &kde-http;.</para>
+<para>&kappname; fait partie du projet &kde; 
+&kde-http;.</para>
 
-<para>&kappname; can be found in the &package; package on 
-&kde-ftp;, the main &FTP; site of the &kde;
-project.</para>
+<para>&kappname; se trouve dans le paquetage &package; à l'adresse 
+&kde-ftp;, le site &FTP; principal du projet &kde;.</para>
