"Corrected typographical errors"
svn path=/trunk/kdelibs/; revision=126526

--- a/doc/kspell/index.docbook
+++ b/doc/kspell/index.docbook
@@ -142,7 +142,7 @@ popularity as it claims to give better suggestions for word replacements.</para>
 <title>Other</title>
 
 <para>It is recommend that you do not change the first two options unless you have
-read the Interational ISpell man page.</para>
+read the International ISpell man page.</para>
 </sect1>
 </chapter>
 
