--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+kdelibs (4:2.2.2-6) unstable; urgency=low
+
+  * sync with upstream
+  * Add in Build-Depends we normally get through libqt-dev so we can better
+    follow policy
+  * Add libfam-dev to Build-Depends
+  * Version the libjpeg62-dev deps and add libjpeg to the depends for
+    kdelibs-dev since some older versions don't have the .la file
+  * Put bug reporting back to KDE so the users are happy and the developers
+    are not.
+
+ -- Ivan E. Moore II <rkrusty@debian.org>  Thu, 13 Dec 2001 00:57:00 -0700
+
 kdelibs (4:2.2.2-5) unstable; urgency=low
 
   * sync with upstream
