--- a/kdeui/AUTHORS
+++ b/kdeui/AUTHORS
@@ -42,7 +42,7 @@ KFontDialog class
 Tim D. Gilman <tdgilman@best.com>
 KDatePicker, KDateTable class
 
-Nicolas Hadacek <hadacek@via.ecp.fr>
+Nicolas Hadacek <hadacek@kde.org>
 Key configuration classes, bug fixes
 
 Christoph Neerfeld <Christoph.Neerfeld@mail.bonn.netsurf.de>
