now that Qt has a real fix for the QVariant(bool), let use a real fix ...
btw, is there a chance that one day readPropertyEntry will have a default
value parameter (like all other read*Entry) ?
I think it's possible without breaking binary compatibility ...

svn path=/trunk/kdelibs/; revision=127450

--- a/kdecore/AUTHORS
+++ b/kdecore/AUTHORS
@@ -30,7 +30,7 @@ KFontDialog classes
 Tim D. Gilman <tdgilman@best.com>
 KDatePicker, KDateTable class
 
-Nicolas Hadacek <hadacek@via.ecp.fr>
+Nicolas Hadacek <hadacek@kde.org>
 Key configuration classes, bug fixes
 
 Michael Will <Michael.Will@student.uni-tuebingen.de>
