--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdelibs (4:2.2.2-8) unstable; urgency=low
+
+  * Depend on libfam-dev (Closes: #124264)
+
+ -- Ivan E. Moore II <rkrusty@debian.org>  Sun, 16 Dec 2001 17:21:00 -0700
+
 kdelibs (4:2.2.2-7) unstable; urgency=low
 
   * Break out bin files from kdelibs3 so that we can interoperate with
