--- a/kdoctools/customization/nl/entities/help-menu.docbook
+++ b/kdoctools/customization/nl/entities/help-menu.docbook
@@ -6,11 +6,11 @@
 <keycombo action="simul"><keycap>F1</keycap></keycombo>
 </shortcut>
 <guimenu>Help</guimenu>
-<guimenuitem>Contents...</guimenuitem>
+<guimenuitem>Inhoud...</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Invokes the KDE Help system</action> starting at the
-&kappname; help pages. (this document).</para></listitem>
+<listitem><para><action>Roept het KDE Help systeem aan</action> beginnent bij de
+help pagina's van &kappname;. (dit document).</para></listitem>
 </varlistentry>
 
 <varlistentry>
@@ -19,40 +19,41 @@
 <keycombo action="simul">&Shift;<keycap>F1</keycap></keycombo>
 </shortcut>
 <guimenu>Help</guimenu>
-<guimenuitem>What's This?</guimenuitem>
+<guimenuitem>Wat is dit?</guimenuitem>
 </menuchoice>
 </term>
-<listitem><para><action>Changes the mouse cursor to a combination arrow and
-question mark.</action>  Clicking on items within &kappname; will open a help
-window (if one exists for the particular item) explaining the item's
-function.</para></listitem>
+<listitem><para><action>Verandert de muiscursor in de combinatie pijltje en 
+vraagteken.</action>  Het klikken op items in &kappname; zal een helpvenster 
+openen (als er een bestaat voor dit specifieke item) met een omschrijving van 
+de functie van dit item. </para></listitem>
 </varlistentry>
 
 
 <varlistentry>
 <term><menuchoice>
 <guimenu>Help</guimenu>
-<guimenuitem>Report Bug...</guimenuitem>
+<guimenuitem>Bug Rapporteren...</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>Opens the Bug report dialog</action> where you can
-report a bug or request a <quote>wishlist</quote> feature.</para></listitem>
+<listitem><para><action>Opent het bugrapport dialoogvenster</action> waar u een
+een bug kunt rapporteren of een <quote>wensitem</quote> kunt aanvragen.</para>
+</listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
 <guimenu>Help</guimenu>
-<guimenuitem>About &kappname;</guimenuitem>
+<guimenuitem>Over &kappname;</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This will display version and author
-information.</action></para></listitem>
+<listitem><para><action>Deze ingang zal informatie over de versie en de auteurs 
+tonen.</action></para></listitem>
 </varlistentry>
 
 <varlistentry>
 <term><menuchoice>
 <guimenu>Help</guimenu>
-<guimenuitem>About KDE</guimenuitem>
+<guimenuitem>Over KDE</guimenuitem>
 </menuchoice></term>
-<listitem><para><action>This displays the KDE version and other basic
-information.</action></para></listitem>
+<listitem><para><action>Dit zal de KDE versie en andere standaard informatie 
+tonen.</action></para></listitem>
 </varlistentry>
 </variablelist>
