--- a/kdoctools/customization/nl/entities/install-intro.docbook
+++ b/kdoctools/customization/nl/entities/install-intro.docbook
@@ -1,5 +1,5 @@
 <!-- requires that packagename is defined in the documentation prologue -->
 <para>&kappname; is een onderdeel van het &kde;-projekt &kde-http;.</para>
 
-<para>U kan &kappname; vinden in de &package;-module op 
+<para>U kunt &kappname; vinden in de &package;-module op 
 &kde-ftp;, the hoofd-&FTP;-site vand het &kde;-projekt.</para>
